# multi_uav_test_area_coverage

./: LICENSE  README.md
execution_monitor/: CMakeLists.txt  package.xml
execution_monitor/include/execution_monitor/execution_monitors/: execution_monitor.h  global_monitor.h
execution_monitor/include/execution_monitor/monitor_info/: global_drone.h  local_drone.h  monitor_data.h
execution_monitor/launch/: execution_monitor.launch  global_monitor.launch  monitors3.launch
execution_monitor/src/: execution_monitor.cpp  global_drone.cpp  global_monitor.cpp  local_drone.cpp  monitor_data.cpp
multi_robot_simulator/: CMakeLists.txt  package.xml
multi_robot_simulator/include/simulator/: flightmare_simulator.h
multi_robot_simulator/include/unexpected_events/: drone.h  event.h  event_controller.h  event_generator.h
multi_robot_simulator/launch/: multi_robot_simulator.launch
multi_robot_simulator/launch/cameras/: camera.rviz  cameras.rviz
multi_robot_simulator/src/simulator/: flightmare_simulator.cpp
multi_robot_simulator/src/unexpected_events/: drone.cpp  event.cpp  event_controller.cpp  event_generator.cpp
mutac_msgs/: CMakeLists.txt  package.xml
mutac_msgs/msg/: Alarm.msg  Battery.msg  Context.msg  Event.msg  EventIdentified.msg  Generation.msg  Identifier.msg  Label.msg  LabeledPath.msg  LabeledPoint.msg  Metrics.msg  PathIdentified.msg  Plan.msg  Region.msg  RegionIdentified.msg  SimulatedEvent.msg  State.msg  Sweep.msg
mutac_msgs/srv/: GeneratePlan.srv  Split.srv  UpdatePlan.srv
performance_evaluation/: CMakeLists.txt  package.xml  setup.py
performance_evaluation/launch/: performance_evaluator.launch  performance_viewer.launch
performance_evaluation/performance_evaluator/include/performance_evaluator/: drone.h  metricsGenerator.h
performance_evaluation/performance_evaluator/src/: drone.cpp  metricsGenerator.cpp
performance_evaluation/performance_viewer/: config.yaml  config.yaml.old
performance_evaluation/performance_viewer/scripts/: display.py
performance_evaluation/performance_viewer/src/performance_viewer/: Drone.py  MainWindow.py  Map.py  MapWindow.py
planner/: CMakeLists.txt  package.xml
planner/launch/: planner.launch
planner/src/: main.cpp
planner/src/multi_uav_planning_binpat/: CMakeLists.txt
planner/src/multi_uav_planning_binpat/planning_binpat/include/: assignment.hpp  geometry.hpp  index.hpp  label.hpp  plan.hpp  sequence.hpp  utility.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/assignment/: algorithm.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/assignment/bare/: lap.h
planner/src/multi_uav_planning_binpat/planning_binpat/include/geometry/: chain.hpp  distance.hpp  line.hpp  point.hpp  polygon.hpp  scrawl.hpp  segment.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/index/: algorithm.hpp  chain.hpp  index.hpp  weight.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/label/: algorithm.hpp  label.hpp  point.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/plan/: agent.hpp  algorithm.hpp  parameters.hpp  region.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/sequence/: algorithm.hpp  cached_sequence.hpp  container_sequence.hpp  flatten_sequence.hpp  misc.hpp  pair_sequence.hpp  range_sequence.hpp  transform_sequence.hpp  variant_sequence.hpp  while_sequence.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/include/utility/: misc.hpp  optional.hpp  variant.hpp
planner/src/multi_uav_planning_binpat/planning_binpat/src/bare/: lap.cpp
tests/: max_dist.py  sensibilidad.py
tests/10_drones/: camera10.rviz
tests/10_drones/case1/: config.yaml  mission_launch.sh
tests/1_drones/case1/: config.yaml  example_events.csv  mission_launch.sh
tests/1_drones/case2/: config.yaml  mission_launch.sh
tests/2_drones/: camera2.rviz
tests/2_drones/case1/: config.yaml  example_events.csv  mission_launch.sh
tests/2_drones/case2/: config.yaml  example_events.csv  mission_launch.sh
tests/3_drones/: camera3.rviz
tests/3_drones/case1/: config.yaml  example_events.csv  mission_launch.sh
tests/3_drones/case2/: config.yaml  example_events.csv  mission_launch.sh
tests/3_drones/case3/: config.yaml  example_events.csv  mission_launch.sh
tests/4_drones/: camera4.rviz
tests/4_drones/case1/: config.yaml  example_events.csv  mission_launch.sh
tests/4_drones/case2/: config.yaml  example_events.csv  mission_launch.sh
tests/5_drones/: camera5.rviz
tests/5_drones/case1/: config.yaml  example_events.csv  mission_launch.sh
tests/5_drones/case2/: config.yaml  example_events.csv  mission_launch.sh
tests/6_drones/: camera6.rviz
tests/6_drones/case1/: config.yaml  example_events.csv  mission_launch.sh
tests/6_drones/case2/: config.yaml  example_events.csv  mission_launch.sh
